--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://giannismparous.github.io/EasyRes",
+  "homepage": "https://giannismparous.github.io/",
   "name": "easy-res",
   "version": "0.1.0",
   "private": true,
