--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,35 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# Rust dependencies and build artifacts
+/target
+**/*.rs.bk
+EasyResBackEnd/target/
+
+# If using Cargo.lock in development only (optional, usually you want to keep it)
+/Cargo.lock
+
+# Output files for binaries
+*.exe
+*.dll
+*.so
+*.dylib
+
+# Backtrace log generated on panic in Rust
+rustfmt.toml
+rustfmt-config-backup.toml
+
+# Custom environmental files
+.env
+.env.*
+*.env
+
+# Logs
+*.log
+
+# IDE files (JetBrains, Visual Studio Code, etc.)
+.idea/
+.vscode/
+*.iml
