--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ yarn-error.log*
 EasyResBackEnd/target/
 
 # If using Cargo.lock in development only (optional, usually you want to keep it)
-/Cargo.lock
+*/Cargo.lock
 EasyResBackEnd/Cargo.lock
 
 # Output files for binaries
