--- a/EasyResBackEnd/Cargo.toml
+++ b/EasyResBackEnd/Cargo.toml
@@ -22,3 +22,6 @@ hyper = "0.14.30"
 
 tower-http = { version = "0.3", features = ["trace"] }
 tower-request-id = "0.2.0"
+
+
+uuid = { version = "1", features = ["serde", "v4"] }
