--- a/EasyResBackEnd/Cargo.toml
+++ b/EasyResBackEnd/Cargo.toml
@@ -25,3 +25,7 @@ tower-request-id = "0.2.0"
 
 
 uuid = { version = "1", features = ["serde", "v4"] }
+
+
+firebase-rs = "2.0.5"
+reqwest = { version = "0.11", features = ["json"] }
