--- a/easy-res-server/Cargo.toml
+++ b/easy-res-server/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "EasyResBackEnd"
+name = "easy-res-server"
 version = "0.1.0"
 edition = "2021"
+default-run = "easy-res-server"
 
 [dependencies]
 axum = "0.6"               # Axum web framework
